--- a/VentilatorTesting/VentilatorTesting.csproj
+++ b/VentilatorTesting/VentilatorTesting.csproj
@@ -127,6 +127,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensor.cs" />
     <Compile Include="SensorConstants.cs" />
