--- a/VentilatorTestConsole/VentilatorTestConsole/VentilatorTestConsole.csproj
+++ b/VentilatorTestConsole/VentilatorTestConsole/VentilatorTestConsole.csproj
@@ -10,6 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <EmbeddedResource Remove="StatusPage.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="StatusPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 </Project>
