First implementation of patient status view

--- a/VentilatorTestConsole/VentilatorTestConsole/VentilatorTestConsole.csproj
+++ b/VentilatorTestConsole/VentilatorTestConsole/VentilatorTestConsole.csproj
@@ -10,16 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Remove="StatusPage.xaml" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.2.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
   </ItemGroup>
 
   <ItemGroup>
-    <Page Include="StatusPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+    <EmbeddedResource Update="PatientStatusView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="StatusPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
