--- a/VentilatorTestConsole/VentilatorTestConsole/VentilatorTestConsole.csproj
+++ b/VentilatorTestConsole/VentilatorTestConsole/VentilatorTestConsole.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.2.1" />
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
   </ItemGroup>
