--- a/VentilatorTestConsole/VentilatorTestConsole.UWP/VentilatorTestConsole.UWP.csproj
+++ b/VentilatorTestConsole/VentilatorTestConsole.UWP/VentilatorTestConsole.UWP.csproj
@@ -143,8 +143,8 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5"/>
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.726" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VentilatorTestConsole\VentilatorTestConsole.csproj">
